adobe-test/devops-interview-test/part1/static-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-svc
  labels:
    app: static-svc
spec:
  replicas: 3
  selector:
    matchLabels:
      app: static-svc
  template:
    metadata:
      labels:
        app: static-svc
    spec:
      containers:
      - name: static-svc
        image: nginxdemos/nginx-hello
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: static-svc
spec:
  type: NodePort
  selector:
    app: static-svc
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30008
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: static-svc
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: static.oursaas.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: static-svc
                port:
                  number: 8080
