adobe-test/devops-interview-test/part1/network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-svc
spec:
  podSelector:
    matchLabels:
      app: api-svc
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - ipBlock:
        cidr: 172.1.1.0/24
    ports:
    - protocol: TCP
      port: 6379
  egress:
  - to:
    - ipBlock:
        cidr: 172.1.1.0/24
    ports:
    - protocol: TCP
      port: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: static-svc
spec:
  podSelector:
    matchLabels:
      app: static-svc
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              role: s3-backend
      ports:
        - protocol: TCP
          port: 8080
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              role: s3-backend
      ports:
        - protocol: TCP
          port: 8080
